--- a/TODO
+++ b/TODO
@@ -4,5 +4,6 @@
  - Controllare, eventualmente le operazioni utilitarie che mancano
  - Comincia a immaginare i clash 
  - Timeslot in vis_precond rimane numero di merda, aggiustalo
+ - Controllare se funziona tutta la roba con gerarchia o meno con il freeBusy
  
  Quando hai fatto qualche punto, N.B marca le cose sull'elenco puntato. 
