--- a/TODO
+++ b/TODO
@@ -5,5 +5,6 @@
  - Comincia a immaginare i clash 
  - Timeslot in vis_precond rimane numero di merda, aggiustalo
  - Controllare se funziona tutta la roba con gerarchia o meno con il freeBusy
+ - Controllare se due gruppi sono allo stesso livello, cosa fa, quindi se gerarchicamente nessuno domina nessuno.
  
  Quando hai fatto qualche punto, N.B marca le cose sull'elenco puntato. 
