--- a/TODO
+++ b/TODO
@@ -3,6 +3,11 @@
  - Calendario ESCLUSIVO e NON_ESCLUSIVO ---- FATTO 
  
  - Visulizzazione e operazione di creazione e modifica per i delegati, in base a quello che possono fare (controllare cosa possono fare in base al fatto che siano DELEGATO_ROOT e DELEGATO_ADMIN)
+ = Lista dei calendari === Tiene conto del delegato (senza distinzione di ruoli) ---- FATTO 
+ = Visualizza gli eventi se sei delegato, rispettando le pre/post === 
+ = Modifica gli eventi in base al tipo di delegato ====
+ 
+ 
  
  - Controllare, eventualmente le operazioni utilitarie che mancano
  
