--- a/TODO
+++ b/TODO
@@ -17,7 +17,17 @@
  
  - Controllare se funziona tutta la roba con gerarchia o meno con il freeBusy ---- FATTO 
  
- - Controllare se due gruppi sono allo stesso livello, cosa fa, quindi se gerarchicamente nessuno domina nessuno.
+ - Controllare se due gruppi sono allo stesso livello, cosa fa, quindi se gerarchicamente nessuno domina nessuno.---- FATTO 
+ Data la seguente gerarchia e l'evento TEST
+          ANY
+          ||
+         AMICI
+        /     \
+AMICI_INTIMI  NUOVO
+Con le seguenti auth: 
+Amici intimi, +, su evento TEST in read
+Nuovo, -, su evento TEST in read
+Utente: non vede nulla --- Corretto
  
  - Se nodo padre può accedere al calendario X e non esiste una auth. esplicita per il figlio, non compare il nome del calendario nell'elenco ---- FATTO 
  
