--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@
  = Lista dei calendari === Tiene conto del delegato (senza distinzione di ruoli) ---- FATTO 
  = Visualizza gli eventi se sei delegato, rispettando le pre/post ----  FATTO
  = Modifica gli eventi in base al tipo di delegato ==== #TODO
+ = Aggiungere concessione autorizzazioni da parte dei delegati === #TODO
  
  - Controllare, eventualmente le operazioni utilitarie che mancano #TODO
  
