--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@
  = Modifica gli eventi in base al tipo di delegato ==== #TODO
  = Aggiungere concessione autorizzazioni da parte dei delegati === #TODO
  
- - Controllare, eventualmente le operazioni utilitarie che mancano #TODO
+ - Controllare, eventualmente le operazioni utilitarie che mancano ----  FATTO
  
  - Comincia a immaginare i clash  #TODO
  
