--- a/TODO
+++ b/TODO
@@ -5,8 +5,9 @@
  - Visulizzazione e operazione di creazione e modifica per i delegati, in base a quello che possono fare (controllare cosa possono fare in base al fatto che siano DELEGATO_ROOT e DELEGATO_ADMIN)
  = Lista dei calendari === Tiene conto del delegato (senza distinzione di ruoli) ---- FATTO 
  = Visualizza gli eventi se sei delegato, rispettando le pre/post ----  FATTO
- = Modifica gli eventi in base al tipo di delegato ==== #TODO
+ = Modifica gli eventi in base al tipo di delegato ==== #TODO (Da provare)
  = Aggiungere concessione autorizzazioni da parte dei delegati === #TODO
+ = Quando si inserisce un evento, controllare che l'utente sia un owner del cal o uno dei due tipi di delegato ===#TODO
  
  - Controllare, eventualmente le operazioni utilitarie che mancano ----  FATTO
  
