--- a/TODO
+++ b/TODO
@@ -32,3 +32,18 @@ Utente: non vede TEST, ma potrebbe rompere le palle se sopra c'è una auth di ti
  - Se nodo padre può accedere al calendario X e non esiste una auth. esplicita per il figlio, non compare il nome del calendario nell'elenco ---- FATTO 
  
  - Freebusy non funziona ---- FATTO 
+ 
+ 
+ EVENTI CALENDARI DIVERSI:
+- Caledario esclusivo e calendario non esclusivo. Se il delegato fissa un nuovo evento in un calendaro non esclusivo che va in clash con un evento già fissato di un calendario esclusivo, 
+non fisso il nuovo evento. VIceversa, se ho già fissato un evento in un calendario non esclusivo e sto fissando un evento in un calendario esclusivo, nel caso di clash, lascio entramni gli eventi.
+- Se entrambi i calendari sono non eslcusivi, allora li lascio entrambi memorizzati.
+- Se i calendari sono entrambi escluvi, devo notificarlo all'utente e decide lui.
+
+EVENTI CALENDARI UGUALI:
+- Eventi fissati da owner, antecedenti a quelli fissati da delegati, vince quello owner ed evento delegato non viee fissato. Viceversa, se viene fissato prima l'evento del delegato e poi quello dell'owner,
+allora lascio fissati entrambi gli eventi.
+- Stessa cosa vale per eventi fissati dal delegato root rispetto ad eventi fissati dal delegato admin. In ordine, se viene fissato prima un evento da parte del delegato root e poi da parte del delegato admin e vano i clash, lascio fissato
+quello del dleegato root; viceversa lascio fssati entrambi gli eventi.
+_In caso di utenti paritari, quindi delegati root e delegati admin, in ogni caso lascio fissati entrambi gli eventi in clash. 
+ 
