--- a/TODO
+++ b/TODO
@@ -45,5 +45,5 @@ EVENTI CALENDARI UGUALI:
 allora lascio fissati entrambi gli eventi.
 - Stessa cosa vale per eventi fissati dal delegato root rispetto ad eventi fissati dal delegato admin. In ordine, se viene fissato prima un evento da parte del delegato root e poi da parte del delegato admin e vano i clash, lascio fissato
 quello del dleegato root; viceversa lascio fssati entrambi gli eventi.
-_In caso di utenti paritari, quindi delegati root e delegati admin, in ogni caso lascio fissati entrambi gli eventi in clash. 
+- In caso di utenti paritari, quindi delegati root e delegati admin, in ogni caso lascio fissati entrambi gli eventi in clash. 
  
