--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@
  
  - Controllare, eventualmente le operazioni utilitarie che mancano ----  FATTO
  
- - Comincia a immaginare i clash  #TODO
+ - Comincia a immaginare i clash  ---- FATTO 
  
  - Timeslot in vis_precond rimane numero di merda, aggiustalo ---- FATTO 
  
